--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,4 @@ block content
   h1= title
   p Welcome to #{title}
   p Yay, we're running!
+  p And this shoudl be deployed through codeship in one go!
